--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,900&family=Roboto:wght@400;700;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,800;1,900&display=swap">
-
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,500&family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;1,500;1,600;1,800&family=Sansita:wght@400;700;800;900&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap CSS -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,16 +49,15 @@
     <!-- Header -->
     <header class="header " id="header">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-6 header-1">
-                    <h1> Hai ! I'm Sang Sloop</h1>
-                    <h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus et, maiores a asperiores
-                        itaque adipisci.</h6>
+            <div class="row pt-5">
+                <div class="col-sm-5 header-1">
+                    <h1>I am <br>Renaldi Dwi Kasiadi</h1>
+                    <h6>Asal dari Surabaya. Lulusan Teknik Informatika Dr.Soetomo Tahun 2022.</h6>
                     <div class="button-holder text-left">
                         <a href="#portfolio" class="button">LEARN MORE</a>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 offset-sm-1">
                     <div class="hero">
                         <img src="img/87.png" alt="">
                     </div>
@@ -104,14 +107,14 @@
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Nama :
                                     </label>
-                                    <h6 class="label-h6">Renaldi Sang Sloop</h6>
+                                    <h6 class="label-h6">Renaldi Dwi Kasiadi</h6>
                                 </div>
                             </div>
                             <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Email
                                         :</label>
-                                    <h6 class="label-h6">informatika3052@gmail.com</h6>
+                                    <h6 class="label-h6">renaldienol86@gmail.com</h6>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +155,6 @@
                 </div>
             </div>
     </section>
-
     <!-- Skill -->
     <section class="skill" id="skill">
         <section>
@@ -168,9 +170,8 @@
                 <div class="row">
                     <div class="col-md-5 ">
                         <div class="skill-1">
-                            <h2>What My Design<br>Skill Included</h2>
-                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum pariatur soluta optio
-                                recusandae consequatur quasi.</h6><br>
+                            <h2>Beberapa bahasa pemograman yang saya kuasai antara lain sebagai berikut :</h2>
+
                             <h4 class="skill-html">HTML</h4>
 
                             <h4 class="skill-css">CSS</h4>
@@ -255,7 +256,7 @@
             <div class="row">
                 <div class="col-md-6 mb-3 ">
                     <h3><input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Name"></h3>
-                    <h3><input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Eamil"></h3>
+                    <h3><input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Email"></h3>
                     <h3><input type="text" class="col-md-9 input-contact" name="inputEmail4" placeholder="Subject"></h3>
                     <h3><textarea type="email" class="col-md-9 input-contact textarea" name="inputEmail4"
                             placeholder="Message"></textarea></h3>
